--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -7,7 +7,8 @@
 	--color-background: var(--background);
 	--color-foreground: var(--foreground);
 	--font-sans: var(--font-sans);
-	--font-mono: var(--font-geist-mono);
+	--font-inter: var(--font-inter);
+	--font-public-sans: var(--font-public-sans);
 	--color-sidebar-ring: var(--sidebar-ring);
 	--color-sidebar-border: var(--sidebar-border);
 	--color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -53,7 +54,7 @@
 	--card-foreground: oklch(0.141 0.005 285.823);
 	--popover: oklch(1 0 0);
 	--popover-foreground: oklch(0.141 0.005 285.823);
-	--primary: oklch(0.6 0.13 163);
+	--primary: oklch(0.5854 0.2041 277.12);
 	--primary-foreground: oklch(0.98 0.02 166);
 	--secondary: oklch(0.967 0.001 286.375);
 	--secondary-foreground: oklch(0.21 0.006 285.885);
@@ -68,12 +69,12 @@
 	--chart-1: oklch(0.85 0.13 165);
 	--chart-2: oklch(0.77 0.15 163);
 	--chart-3: oklch(0.7 0.15 162);
-	--chart-4: oklch(0.6 0.13 163);
+	--chart-4: oklch(0.5854 0.2041 277.12);
 	--chart-5: oklch(0.51 0.1 166);
 	--radius: 0.625rem;
 	--sidebar: oklch(0.985 0 0);
 	--sidebar-foreground: oklch(0.141 0.005 285.823);
-	--sidebar-primary: oklch(0.6 0.13 163);
+	--sidebar-primary: oklch(0.5854 0.2041 277.12);
 	--sidebar-primary-foreground: oklch(0.98 0.02 166);
 	--sidebar-accent: oklch(0.967 0.001 286.375);
 	--sidebar-accent-foreground: oklch(0.21 0.006 285.885);
@@ -103,7 +104,7 @@
 	--chart-1: oklch(0.85 0.13 165);
 	--chart-2: oklch(0.77 0.15 163);
 	--chart-3: oklch(0.7 0.15 162);
-	--chart-4: oklch(0.6 0.13 163);
+	--chart-4: oklch(0.5854 0.2041 277.12);
 	--chart-5: oklch(0.51 0.1 166);
 	--sidebar: oklch(0.21 0.006 285.885);
 	--sidebar-foreground: oklch(0.985 0 0);
